src/App.css
/* --------------------------------------STYLE-------------------------------------- */

/* COLOR THEMES */
.color-theme-day {
  --color-background-1: #6694cc;
  --color-background-2: #c4edf7;
  --color-background-3: #fafafa;
  
  --color-gray: #b5b5b5;
  --color-white: #ffffff;
  
  --font-color-1: #000000;
  --font-color-2: #808080;
  --font-color-3: #ffffff;
  
  --color-shadow: #808080;
  --color-header-detail-1: #80b9ff;
  --color-photo-detail-1: #73739b80;
  --button-dark-detail: #000000;
}

.color-theme-night {
  --color-background-1: #19304d;
  --color-background-2: #0e5567;
  --color-background-3: #1e1e24;
  
  --color-gray: #525252;
  --color-white: #212121;
  
  --font-color-1: #ffffff;
  --font-color-2: #999999;
  --font-color-3: #808080;
  
  --color-shadow: #4a4a4a;
  --color-header-detail-1: #103b70;
  --color-photo-detail-1: #ffffff80;
  --button-dark-detail: #000000;
}

/* BACKGROUND + BORDER */
#root-react {
  background: var(--color-background-1);
  background: linear-gradient(to bottom, var(--color-background-2), var(--color-background-1));
}

.app-header > div {
  background: var(--color-background-1);
}

.app-nav {
  background: var(--color-white);
  background: linear-gradient(270deg, var(--color-gray) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray) 100%);
  border-top: 8px solid var(--color-header-detail-1);
  border-bottom: 1.3px solid var(--color-gray);
}

.nav-menu-style > div {
  background: var(--color-white);
  border: 1.3px solid var(--color-gray);
}

.app-aside {
  background: var(--color-background-3);
  border-top: 1.3px solid var(--color-gray);
}

.main-section-style {
  background: var(--color-white);
}

/* LINK */
a {
  text-decoration: none;
  color: var(--font-color-1);
}

.top-link-style {
  border-radius: 25px;
  padding: 1vmin 0;
  margin-bottom: 8px;
  width: 96.33%;
  background: var(--color-background-3);
}

/* TEXT */
.text-x-large {
  font-size: x-large;
}

.text-large {
  font-size: large;
}

.title-line {
  border-bottom: 1.5px solid var(--color-gray);
}

.no-select {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none;
}

/* LIST */
.remove-bullet-list {
  margin-bottom: 0px;
  list-style-type: none;
}

/* BUTTON */
.buttons {
  cursor: pointer;
  padding: 3px 5px;
  color: var(--font-color-1);
  background-color: var(--color-white);
  border: 1.5px solid var(--color-gray);
}

.nav-root-buttons {
  cursor: pointer;
  padding: 1px;
  margin: 0px;
  font-family: 'Raleway', sans-serif;
  font-size: 1em;
  background: none;
  border: none;
  color: var(--font-color-1);
}

/* TITLE */
#website-title {
  color: #ffffff;
  font-family: 'Orbitron', sans-serif;
  font-size: .85em;
  letter-spacing: .1em;
  width: 12em;
  cursor: default;
  pointer-events: none;
}

/* LOGO */
.augium-web-icon {
  width: 3em;
  margin: 0px 10px;
}

/* PROFILE IMAGE */
.profile-photo {
  border-radius: 50%;
  position: relative;
  width: 180px;
  padding: 1px;
  margin-top: 8px;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--color-photo-detail-1);
  border: 1px solid var(--color-photo-detail-1);
  -moz-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
  -webkit-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
  box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
}

/* --------------------------------------LAYOUT-------------------------------------- */

/* HEADER */
.app-header {
  position: fixed;
  width: 100%;
  z-index: 2;
  top: 0%;
}

.app-header > div {
  display: grid;
  align-items: center;
  grid-template-columns: .4fr 10fr 2fr;
  font-size: .9em;
}

/* NAVIGATION */
.app-nav {
  padding: 8px 0px;
  font-size: .9em;
  align-items: center;
  flex-wrap: nowrap;
}

.nav-root-buttons {
  padding: 3px 5px;
}

.nav-menu-style > div {
  z-index: -1;
  position: absolute;
  display: grid;
  grid-gap: 1.5vmin;
  white-space: nowrap;
  padding: 1.5vmin;
  top: 0px;
}

.menu-close > div {
  animation: slideup 180ms linear;
}
@keyframes slideup {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-100px);
  }
}

.menu-open > div {
  animation: dropdown 180ms linear;
  top: 100px;
}
@keyframes dropdown {
  from {
    transform: translateY(-100px);
  }
  to {
    transform: translateY(0px);
  }
}

/* ASIDE + MAIN */
.app-aside {
  border-radius: 2vmin 2vmin 0vmin 0vmin;
  padding: 2vw;
  margin-top: 105px;
}

main section {
  padding: 0vw 2vw;
}

.main-section-style {
  padding-top: 8px;
  margin-bottom: 8px;
}
#main-section-style-last {
  margin-bottom: 0%;
}

.aside-main {
  margin: 2%;
  display: grid;
  color: var(--font-color-1);
}

/* FOOTER */
.app-footer {
  font-size: .9em;
  color: var(--font-color-1);
}

.app-footer-link-grid {
  line-height: 2;
  padding-left: 8px;
  justify-content: space-around;
}

.app-footer ul {
  padding: 0px;
}

.app-footer ul li {
  list-style: none;
  padding: 0px;
}

/* GENERIC */
.flex-between {
  display: flex;
  justify-content: space-between;
  flex-wrap: nowrap;
}

.flex-around {
  display: flex;
  justify-content: space-around;
}

.flex-center {
  display: flex;
  justify-content: center;
}

.border-left {
  padding-top: 10px;
  padding-left: 20px;
  margin-left: 1.5rem;
  border-left: 1px solid var(--color-gray);
  -moz-box-shadow: -5px 0px 4px -5px var(--color-gray);
  -webkit-box-shadow: -5px 0px 4px -5px var(--color-gray);
  box-shadow: -5px 0px 4px -5px var(--color-gray);
}

/*----------------------------------------------MODALS----------------------------------------------*/
.modal {
  position: fixed;
  z-index: -1;
}

.modal-container-open {
  z-index: 3;
  top: 0%;
  width: 100vw;
  height: 100vh;
  background: #00000060;
}

.modal-content-open {
  top: 25%;
  padding: 10vmin 14vmin 20vmin 14vmin;
  text-align: center;
  background: var(--color-background-3);
  border: 1.3px solid var(--button-dark-detail);
  color: var(--font-color-1);
}

/*--------------------------------------QUIERIES(INTERACTIVITY)--------------------------------------*/

/* laptop */
@media(hover: hover) and (pointer: fine) {
  .buttons:hover {
    background-color: var(--color-gray);
  }
  .dark-button:hover {
    background-color: var(--button-dark-detail);
    color: var(--font-color-3);
  }
  .link-desat:hover {
    transition: all 100ms ease;
    color: var(--font-color-2);
  }
  .link-highlight:hover {
    transition: all 100ms ease;
    color: var(--font-color-3);
  }
  .top-link-style:hover {
    background: var(--color-gray);
  }
}

/*--------------------------------------QUIERIES(RESPONSIVITY)--------------------------------------*/
@media(min-width: 768px) {
  .app-main {
    margin-top: 105px;
  }
  .main-section-style {
    border-radius: 13px;
  }
  .app-aside {
    border-radius: 13px;
    border: 0px;
  }
  .aside-main {
    grid-template-columns: 1fr 4fr;
    gap: 8px;
    margin: .66%;
    border-bottom: 0px;
  }
  .top-link-style {
    width: 98.80%;
    margin: 0px .66% 8px .66%;
  }
  .section-lists div {
    display: grid;
    grid-template-columns: 2fr 5fr 1fr;
  }
  .exp-list {
    width: 40vw;
  }
  .profile-photo {
    width: 23vw;
    margin-top: 0px;
    margin-bottom: 25px;
  }
  .profile-photo {
    margin-left: 0vw;
  }
  .border-left {
    margin-top: 75px;
    margin-left: 0rem;
  }
  .shadow-behind {
    -moz-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
    -webkit-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
    box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
  }
}

@media(min-width: 1251px) {
  .profile-photo {
    width: 300px;
  }
}

